--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,75 +1,89 @@
 .hero-section {
-    min-height: 100vh;
-    padding: 100px 40px;
-    background: linear-gradient(to bottom right, #0f0c29, #302b63, #24243e);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-  }
-  
+  min-height: 100vh;
+  padding: 120px 40px 80px;
+  background: linear-gradient(to bottom right, #0f0c29, #302b63, #24243e);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.hero-content {
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
+  text-align: center;
+}
+@media (min-width: 768px) {
   .hero-content {
-    max-width: 1100px;
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
   }
-  
-  @media (min-width: 768px) {
-    .hero-content {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-  
-  .hero-text h2 {
-    font-size: 20px;
-    font-weight: 300;
-    color: #ccc;
-    margin-bottom: 10px;
-  }
-  
+}
+
+.hero-text h2 {
+  font-size: 20px;
+  font-weight: 300;
+  color: #ccc;
+  margin-bottom: 10px;
+}
+
+.hero-text h1 {
+  font-size: 48px;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+
+.hero-text p {
+  font-size: 18px;
+  font-weight: 500;
+  color: #d1d5db;
+  margin-bottom: 20px;
+}
+
+.hero-icons {
+  display: flex;
+  gap: 20px;
+}
+.hero-icons a {
+  color: #ccc;
+  font-size: 28px;
+  transition: color 0.3s;
+}
+.hero-icons a:hover {
+  color: white;
+}
+
+.hero-image .image-wrapper {
+  padding: 5px;
+  border-radius: 50%;
+  background: linear-gradient(to top right, #ec4899, #8b5cf6, #6366f1);
+}
+.hero-image img {
+  border-radius: 50%;
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+  border: 4px solid white;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+}
+
+@media (max-width: 480px) {
   .hero-text h1 {
-    font-size: 48px;
-    font-weight: 800;
-    margin-bottom: 10px;
+    font-size: 32px;
+    padding-top: 200px;
   }
-  
   .hero-text p {
-    font-size: 18px;
-    font-weight: 500;
-    color: #d1d5db;
-    margin-bottom: 20px;
+    font-size: 16px;
   }
-  
-  .hero-icons {
-    display: flex;
-    gap: 20px;
-  }
-  
   .hero-icons a {
-    color: #ccc;
-    font-size: 28px;
-    transition: color 0.3s;
+    font-size: 24px;
   }
-  
-  .hero-icons a:hover {
-    color: white;
-  }
-  
-  .hero-image .image-wrapper {
-    padding: 5px;
-    border-radius: 50%;
-    background: linear-gradient(to top right, #ec4899, #8b5cf6, #6366f1);
-  }
-  
   .hero-image img {
-    border-radius: 50%;
-    width: 280px;
-    height: 280px;
-    object-fit: cover;
-    border: 4px solid white;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+    width: 200px;
+    height: 200px;
   }
-  
+}
