--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,11 +8,10 @@
   z-index: 1000;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
   height : 100px
+}
 
-  body {
-    padding-top: 100px;
-  }
-  
+body {
+  padding-top: 100px;
 }
 
 .navbar-container {
@@ -81,13 +80,18 @@
   .navbar-container {
     flex-direction: column;
     align-items: flex-start;
+    background: linear-gradient(to bottom, #0f0c29cc, #302b63cc, #24243ecc);
     padding: 10px 20px;
     height: 300px;
 
-    body {
-      padding-top: 500px; 
-    }
+   
   }
+
+  body {
+    height: auto;
+    padding-top: 500px; 
+  }
+  
 
   .nav-links {
     flex-direction: column;
@@ -100,8 +104,9 @@
     padding: 10px 0;
     width: 100%;
     display: block;
-  }
-
+  } 
+  
+  
   .navbar-left {
     width: 100%;
     justify-content: space-between;
