--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -68,14 +68,25 @@
 }
 
 @media (max-width: 768px) {
+  .navbar {
+    height: 320px; 
+  }
+  .about-section {
+     
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+  
   .section-title {
     font-size: 28px;
-    padding-top: 200px;
+    padding-top: 0px;
+    margin-top: 0;  
    
   }
 
   .about-intro {
     font-size: 16px;
+    margin-top: 0;  
   }
 
   .block-title {
